# language-c-quote

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  language-c-quote.cabal  test.sh
.github/workflows/: haskell-ci.yml
Language/: C.hs
Language/C/: Parser.hs  Pretty.hs  Properties.hs  Quote.hs  Smart.hs  Syntax-instances.hs  Syntax.hs
Language/C/Parser/: Lexer.info  Lexer.x  Monad.hs  Parser.info  Parser.y  Tokens.hs
Language/C/Quote/: Base.hs  C.hs  CUDA.hs  GCC.hs  ISPC.hs  ObjC.hs  OpenCL.hs
examples/parse/: Main.hs  Makefile  Opts.hs  test.sh
tests/unit/: CUDA.hs  GCC.hs  ISPC.hs  Main.hs  MainCPP.hs  Objc.hs
